[Feat] 온보딩에서 닉네임과 좋아하는 동네 검증만